# quickterm

./: Cargo.toml  LICENSE  README.md
src/: app.rs  cli.rs  config.rs  error.rs  expand.rs  history.rs  ipc.rs  lib.rs  main.rs  menu.rs  terminal.rs
tests/: config.rs  expand.rs  history.rs  terminal.rs
