[package]
name = "quickterm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "quickterm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3"
swayipc = "3"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
